--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+v0.4.4
+======
+PiccoloCRUD 'new' endpoint works in readonly mode - doesn't save any data.
+
 v0.4.3
 ======
 Supporting order by, pagination, and filter operators in PiccoloCRUD.
