--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+v0.5.0
+======
+Changed schema format.
+
 v0.4.4
 ======
 PiccoloCRUD 'new' endpoint works in readonly mode - doesn't save any data.
