--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+v0.7.2
+======
+Can configure where CSRFMiddleware looks for tokens, and bug fixes.
+
 v0.7.1
 ======
 CSRF tokens can now be passed as form values.
