--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+0.8.0
+=====
+Improved session auth - can increase the expiry automatically, which improves
+the user experience.
+
 0.7.6
 =====
 Can choose to not redirect after a successful session auth login - this is
