--- a/CHANGES
+++ b/CHANGES
@@ -1,9 +1,15 @@
 Changes
 =======
 
+0.9.2
+-----
+ * Added ``FastAPIWrapper``, which makes building a FastAPI endpoint really
+   simple.
+ * Improved the handling of malformed queries better in ``PiccoloCRUD`` -
+   catching unrecognised column names, and returning a 400 response.
+
 0.9.1
 -----
-
 ``create_pydantic_model`` now accepts an optional `model_name` argument.
 
 0.9.0
