--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 Changes
 =======
 
+0.10.0
+------
+Updated for Piccolo 0.12.
+
 0.9.2
 -----
  * Added ``FastAPIWrapper``, which makes building a FastAPI endpoint really
