--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 Changes
 =======
 
+0.11.0
+------
+Using ``Column._meta.required`` for Pydantic schema.
+
 0.10.1
 ------
 Can pass more configuration options to FastAPI via ``FastAPIWrapper``.
