--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,13 @@
 Changes
 =======
 
+0.11.2
+------
+ * ``PiccoloCRUD`` now supports the `__readable` query parameter for detail
+   endpoints - i.e. `/api/movie/1/?__readable=true`. Thanks to sinisaos for
+   the initial prototype.
+ * Improving type hints.
+
 0.11.1
 ------
 Bumped requirements.
