--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,14 @@
 Changes
 =======
 
+0.11.3
+------
+ * Using Piccolo's ``run_sync`` instead of asgiref.
+ * Loosened dependencies.
+ * ``create_pydantic_model`` now supports lazy references in ``ForeignKey``
+   columns.
+ * MyPy fixes.
+
 0.11.2
 ------
  * ``PiccoloCRUD`` now supports the `__readable` query parameter for detail
