--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,11 @@
 Changes
 =======
 
+0.11.4
+------
+Using Pydantic to serialise the ``PiccoloCRUD.new`` response. Fixes a bug
+with serialising some values, such as ``decimal.Decimal``.
+
 0.11.3
 ------
  * Using Piccolo's ``run_sync`` instead of asgiref.
