--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,13 @@
 Changes
 =======
 
+0.12.1
+------
+* Added docs for ``__page`` and ``__page_size`` query parameters for
+  ``PiccoloCRUD``.
+* Implemented ``max_page_size`` to prevent excessive server load  - courtesy
+  sinisaos.
+
 0.12.0
 ------
 Renaming migrations which were problematic for Windows users.
