--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 Changes
 =======
 
+0.12.4
+------
+Made FastAPI a requirements, instead of an optional requirement.
+
 0.12.3
 ------
  * Added ids and references endpoints to ``FastAPIWrapper``.
