--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,11 @@
 Changes
 =======
 
+0.12.9
+------
+Fixing ``ids`` endpoint in ``PiccoloCRUD`` with Postgres - search wasn't
+working.
+
 0.12.8
 ------
 The ``ids`` endpoint in ``PiccoloCRUD`` now accepts a limit parameter.
