--- a/CHANGES
+++ b/CHANGES
@@ -1,8 +1,12 @@
 Changes
 =======
 
+0.12.11
+-------
+Exposing the ``help_text`` value for ``Column`` in the Pydantic schema.
+
 0.12.10
-------
+-------
 Fixing a bug with ``ids`` endpoint when there's a limit but no search.
 
 0.12.9
