--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 Changes
 =======
 
+0.12.12
+-------
+Exposing the ``help_text`` value for ``Table`` in the Pydantic schema.
+
 0.12.11
 -------
 Exposing the ``help_text`` value for ``Column`` in the Pydantic schema.
